# deep-learning-template

./: .env  .gitignore  Pipfile  anaconda-project.yml  conda-project.yml  environment-cpu.yml  pyproject.toml  readme.md  test.py  train.py
config/: test.yaml  train.yaml
deep_learning_template/: experiment_tools.py  paths.py  test.py  train.py
deep_learning_template/utils/: experiment_tools.py  paths.py
utils/: experiment_tools.py
